cards transition set up

--- a/src/scss/common.blocks/partners/partners.scss
+++ b/src/scss/common.blocks/partners/partners.scss
@@ -1,16 +1,21 @@
+@use '../../abstracts' as a;
+
 .partners {
     &__title {
         font-size: 2em;
     }
     &__cards-container {
-        // width: 100%;
         display: flex;
         flex-wrap: wrap;
-        justify-content: stretch;
-        gap: 20px;
+        row-gap: 20px;
 
-        @media (min-width: 768px) {
-            // justify-content: space-between;
+        @media (min-width: a.$tablet) {
+            justify-content: space-between;
+        }
+
+        @media (min-width: a.$desktop) {
+            justify-content: flex-start;
+            gap: 30px;
         }
     }
 }
