--- a/src/scss/common.blocks/card/card.scss
+++ b/src/scss/common.blocks/card/card.scss
@@ -1,21 +1,27 @@
 @use '../../abstracts' as a;
 
 .card {
-    min-width: 335px;
     width: 100%;
+    min-width: 335px;
     height: 140px;
-    border: 1px solid a.$main-light;
-    border-radius: 5px;
+
     display: flex;
     align-items: center;
     justify-content: center;
+
+    border: 1px solid a.$main-light;
+    border-radius: 5px;
     cursor: pointer;
 
-    @media (min-width: 768px) {
-        min-width: 229px;
-        max-width: 270px;
+    @media (min-width: a.$tablet) {
+        min-width: 230px;
+        max-width: 30%;
         height: 120px;
-        width: 229px;
+
         background-color: white;
+    }
+
+    @media (min-width: a.$desktop) {
+        max-width: 270px;
     }
 }
