--- a/src/scss/abstracts/_index.scss
+++ b/src/scss/abstracts/_index.scss
@@ -1,4 +1,4 @@
-// @forward './reset.scss';
+@forward './reset.scss';
 @forward './colors.scss';
 @forward './typography.scss';
 @forward './sizes.scss';
