--- a/src/scss/common.blocks/header/header.scss
+++ b/src/scss/common.blocks/header/header.scss
@@ -1,2 +1,37 @@
+@use '../../abstracts/index' as a;
+
 .header {
+    padding: 20px 20px 0px 20px;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    // flex-grow: 2;
+
+    &__logo {
+        // margin-bottom: 16px;
+        order: 1;
+    }
+
+    &__profile {
+        order: 2;
+    }
+
+    &__search-form {
+        order: 3;
+    }
+
+    @media (min-width: a.$tablet) {
+        // padding: 0px;
+        padding: 20px 20px 20px 20px;
+
+        &__profile {
+            order: 3;
+        }
+
+        &__search-form {
+            order: 2;
+        }
+    }
 }
