--- a/src/scss/common.blocks/search-form/search-form.scss
+++ b/src/scss/common.blocks/search-form/search-form.scss
@@ -1,10 +1,58 @@
+@use '../../abstracts/index' as a;
+
+.search-form {
+    // align-self: stretch;
+    max-width: 100%;
+    margin-top: 16px;
+
+    @media (max-width: calc(a.$tablet - 1px)) {
+        //Upper line
+        &:before {
+            content: '';
+            display: block;
+            position: relative;
+            left: -20px;
+            width: 100vw;
+            height: 1px;
+            background: #bbc4d6;
+        }
+    }
+    @media (min-width: a.$tablet) {
+        // width: auto;
+        margin-top: 0px;
+        display: flex;
+        align-items: center;
+        height: 40px;
+    }
+}
+
 .search-form__input {
+    font-size: 14px;
+    font-weight: 400;
+    width: 100%;
+    // padding-top: 12px;
+    margin-top: 12px;
+    text-indent: 29px;
+    border: none;
     background-image: none;
-    padding-left: 0;
+
+    @media (min-width: a.$tablet) {
+        padding-top: 0px;
+        padding: 12px 10px 12px 0px;
+        margin-top: 0px;
+        // margin: 12px 10px 12px 10px;
+        min-width: 459px;
+        height: 40px;
+        border: 1px solid a.$main-light;
+        border-radius: 5px;
+    }
 }
 
 .search-form__input:placeholder-shown {
+    // padding-left: 30px;
+    // background-image: none;
     background-image: url(../../Assets/search-icon.svg);
+    background-position: left center;
+
     background-repeat: no-repeat;
-    padding-left: 30px;
 }
