--- a/src/scss/common.blocks/header/header.scss
+++ b/src/scss/common.blocks/header/header.scss
@@ -1,16 +1,9 @@
 @use '../../abstracts/index' as a;
 
 .header {
-    padding: 20px 20px 0px 20px;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.05);
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    // flex-grow: 2;
 
     &__logo {
-        // margin-bottom: 16px;
         order: 1;
     }
 
@@ -23,8 +16,8 @@
     }
 
     @media (min-width: a.$tablet) {
-        // padding: 0px;
-        padding: 20px 20px 20px 20px;
+        display: flex;
+        justify-content: center;
 
         &__profile {
             order: 3;
@@ -32,6 +25,29 @@
 
         &__search-form {
             order: 2;
+            flex-grow: 100;
+        }
+    }
+
+    &__wrapper {
+        padding: 20px 20px 0px 20px;
+        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        @media (min-width: a.$tablet) {
+            flex: 1;
+            min-width: 728px;
+            max-width: 1170px;
+            padding: 20px 0px;
+            margin: 0px 20px;
+            flex-wrap: nowrap;
+            gap: 40px;
+            // flex-grow: 2;
+        }
+        @media (min-width: a.$desktop) {
+            // min-width: 1170px;
         }
     }
 }
