--- a/src/scss/abstracts/colors.scss
+++ b/src/scss/abstracts/colors.scss
@@ -1,4 +1,5 @@
 $main-dark: #121920;
 $main-light: #ebebf1;
 $main-bg: #ffffff;
-$extra-light: #768298;
+$main-light-darker: #768298;
+$main-light-dark: #bbc4d6;
