--- a/src/scss/abstracts/typography.scss
+++ b/src/scss/abstracts/typography.scss
@@ -1,7 +1,8 @@
-$main-font-family: 'Roboto' sans-serif;
+$main-font-family: 'Roboto', sans-serif;
 
-$font-wight-bold: 500;
+$font-weight-bold: 500;
+$font-weight-regular: 400;
+
+$font-size-regular: 14px;
 $font-size-large: 28px;
-
-$font-wight-light: 400;
-$font-size-large: 14px;
+$font-size-larger: 36px;
