--- a/src/scss/common.blocks/_index.scss
+++ b/src/scss/common.blocks/_index.scss
@@ -3,3 +3,4 @@
 @forward './profile/profile.scss';
 @forward './search-form/search-form.scss';
 @forward './card/card.scss';
+@forward './title/title.scss';
