--- a/src/scss/common.blocks/partners/partners.scss
+++ b/src/scss/common.blocks/partners/partners.scss
@@ -3,6 +3,7 @@
 .partners {
     &__title {
         font-size: 2em;
+        margin-top: 70px;
     }
     &__cards-container {
         display: flex;
