--- a/src/scss/common.blocks/profile/profile.scss
+++ b/src/scss/common.blocks/profile/profile.scss
@@ -19,6 +19,10 @@
     }
 
     &__name {
+        font-size: a.$font-size-regular;
+        font-weight: a.$font-weight-regular;
+        line-height: 120%;
+        color: a.$main-light-darker;
         display: flex;
         align-items: center;
         padding-left: 19px;
@@ -27,5 +31,7 @@
 
     &__avatar {
         margin-left: 10px;
+        width: 40px;
+        height: 40px;
     }
 }
