--- a/src/scss/common.blocks/search-form/search-form.scss
+++ b/src/scss/common.blocks/search-form/search-form.scss
@@ -2,6 +2,11 @@
 
 .search-form {
     max-width: 100%;
+    color: a.$main-light-dark;
+    font-size: a.$font-size-regular;
+    font-weight: a.$font-weight-regular;
+    line-height: 16px;
+
     margin-top: 16px;
 
     @media (max-width: calc(a.$tablet - 1px)) {
