links added to all interactive elements

--- a/src/scss/common.blocks/header/header.scss
+++ b/src/scss/common.blocks/header/header.scss
@@ -50,4 +50,9 @@
             // min-width: 1170px;
         }
     }
+
+    &__logo {
+        max-width: 40px;
+        max-height: 40px;
+    }
 }
