--- a/src/scss/common.blocks/card/card.scss
+++ b/src/scss/common.blocks/card/card.scss
@@ -17,6 +17,14 @@
         box-shadow: -3px 0px 40px rgba(0, 0, 0, 0.1), 0px 0px 10px rgba(164, 164, 164, 0.03);
     }
 
+    &__link-filler {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     @media (min-width: a.$tablet) {
         min-width: 230px;
         max-width: 30%;
@@ -27,5 +35,10 @@
 
     @media (min-width: a.$desktop) {
         max-width: 270px;
+    }
+
+    &__logo {
+        max-width: 60px;
+        max-height: 60px;
     }
 }
