--- a/src/scss/common.blocks/profile/profile.scss
+++ b/src/scss/common.blocks/profile/profile.scss
@@ -26,7 +26,7 @@
         display: flex;
         align-items: center;
         padding-left: 19px;
-        border-left: 1px solid a.$main-light;
+        // border-left: 1px solid a.$main-light;
     }
 
     &__avatar {
