--- a/src/scss/common.blocks/header/header.scss
+++ b/src/scss/common.blocks/header/header.scss
@@ -3,62 +3,55 @@
 .header {
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.05);
 
-    &__logo {
-        order: 1;
-    }
-
-    &__profile {
-        order: 2;
-    }
-
-    &__search-form {
-        order: 3;
-    }
-
     @media (min-width: a.$tablet) {
+        height: 80px;
         display: flex;
         justify-content: center;
-
-        &__profile {
-            order: 3;
-        }
-
-        &__search-form {
-            order: 2;
-            flex-grow: 100;
-        }
-        // По макетку непонятно, к какому блоку логически относится
-        &:after {
-            content: '';
-            display: block;
-            position: relative;
-            right: 167px;
-            height: 80px;
-            width: 1px;
-            background: a.$main-light;
-        }
     }
 
     &__wrapper {
-        padding: 20px 20px 0px 20px;
-        align-items: center;
+        padding: 20px 0px 0px 0px;
+
         display: flex;
+        align-items: center;
         flex-wrap: wrap;
         justify-content: space-between;
 
+        :nth-child(1) {
+            order: 1;
+        }
+        :nth-child(2) {
+            order: 3;
+        }
+        :nth-child(3) {
+            order: 2;
+        }
         @media (min-width: a.$tablet) {
+            padding: 0px;
+
             flex: 1;
             min-width: 728px;
             max-width: 1170px;
-            padding: 20px 0px;
             margin: 0px 20px;
             flex-wrap: nowrap;
             gap: 40px;
-            // flex-grow: 2;
+
+            :nth-child(2) {
+                order: 2;
+                flex-grow: 2;
+            }
+            :nth-child(3) {
+                order: 3;
+                border-left: 1px solid a.$main-light;
+            }
         }
-        @media (min-width: a.$desktop) {
-            // min-width: 1170px;
-        }
+    }
+
+    &__flex-el {
+        height: 100%;
+        max-width: 100%;
+        display: flex;
+        align-items: center;
     }
 
     &__logo {
@@ -68,7 +61,7 @@
 
     &__search-form {
         margin-top: 16px;
-
+        width: 100%;
         @media (max-width: calc(a.$tablet - 1px)) {
             //The line also forces search-form to wrap to next line
             &:before {
@@ -81,8 +74,14 @@
                 background: #bbc4d6;
             }
         }
+
+        @media (min-width: a.$tablet) {
+            margin-top: 0px;
+            height: 40px;
+        }
     }
 
     &__profile {
+        padding-left: 19px;
     }
 }
