--- a/src/scss/common.blocks/partners/partners.scss
+++ b/src/scss/common.blocks/partners/partners.scss
@@ -2,23 +2,34 @@
 
 .partners {
     &__title {
-        font-size: 2em;
+        align-self: a.$font-size-large;
         margin-top: 70px;
     }
     &__cards-container {
+        margin-top: 30px;
+
         display: flex;
         flex-wrap: wrap;
         row-gap: a.$default-indent;
-
-        margin-top: 30px;
-
         @media (min-width: a.$tablet) {
             justify-content: space-between;
         }
-
         @media (min-width: a.$desktop) {
             justify-content: flex-start;
             gap: 30px;
+        }
+    }
+
+    &__card {
+        border: 1px solid a.$main-light;
+        border-radius: 5px;
+        @media (min-width: a.$tablet) {
+            min-width: 230px;
+            max-width: 30%;
+            height: 120px;
+        }
+        @media (min-width: a.$desktop) {
+            max-width: 270px;
         }
     }
 }
