--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,11 +3,11 @@
 @use './common.blocks/' as b;
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
-// * {
-//     border: 1px solid red;
-// margin: 0px !important ;
-// padding: 0px !important ;
-// }
+* {
+    // outline: 1px solid red;
+    // margin: 0px !important ;
+    // padding: 0px !important ;
+}
 
 /* Global styles */
 body {
@@ -17,36 +17,14 @@ body {
     line-height: 1.6;
     background-color: a.$main-bg;
     font-family: a.$main-font-family;
-    // background-color: red;
-    // display: flex;
-    // align-items: center;
-    // flex-direction: column;
 }
 
 .wrapper {
     min-width: a.$min-wrapper-width;
     max-width: a.$max-wrapper-width;
-    margin: auto;
-    margin: 0 20px 73px 20px;
-    // margin-top: 0px;
-    // margin-left: min(20px, 1000px);
-    // margin-right: min(20px, 1000px);
-    // margin-bottom: 73px;
+    margin: 0px a.$default-indent;
 
     @media (min-width: calc(a.$max-wrapper-width + a.$default-indent * 2)) {
-        margin: auto;
+        margin: 0px auto;
     }
-    // margin: auto;
 }
-
-.filler {
-    width: 100%;
-    height: 100%;
-}
-
-// @media (min-width: 768px) {
-//     .wrapper {
-//         min-width: 230px;
-//         background-color: green;
-//     }
-// }
