--- a/src/scss/common.blocks/search-form/search-form.scss
+++ b/src/scss/common.blocks/search-form/search-form.scss
@@ -9,6 +9,7 @@
 
     &__input {
         width: 100%;
+        height: 24px;
         margin-top: 12px;
         padding-left: 0px;
         //Magnifier icon size + 5px indent
@@ -16,10 +17,12 @@
 
         font-size: 14px;
         font-weight: 400;
+        line-height: 16px;
 
         border: none;
 
         @media (min-width: a.$tablet) {
+            height: auto;
             padding: 12px 10px 12px 10px;
             margin-top: 0px;
 
