--- a/src/scss/common.blocks/header/header.scss
+++ b/src/scss/common.blocks/header/header.scss
@@ -17,30 +17,34 @@
         flex-wrap: wrap;
         justify-content: space-between;
 
-        :nth-child(2) {
-            order: 3;
-        }
-        :nth-child(3) {
-            order: 2;
-        }
+        // &:nth-child(2) {
+        //     order: 3;
+        // }
+        // &:nth-child(3) {
+        //     order: 2;
+        // }
         @media (min-width: a.$tablet) {
             padding: 0px;
 
-            flex: 1;
+            flex: 2;
             min-width: 728px;
             max-width: 1170px;
             margin: 0px 20px;
             flex-wrap: nowrap;
             gap: 40px;
 
-            :nth-child(2) {
-                order: 2;
-                flex-grow: 2;
-            }
-            :nth-child(3) {
-                order: 3;
-                border-left: 1px solid a.$main-light;
-            }
+            // &:nth-child(2) {
+            //     order: 2;
+            //     flex-grow: 2;
+            // }
+            // &:nth-child(3) {
+            //     order: 3;
+            //     border-left: 1px solid a.$main-light;
+            // }
+            // &:last-child {
+            //     border-left: 1px solid a.$main-light;
+            //     background-color: red;
+            // }
         }
     }
 
@@ -49,6 +53,22 @@
         max-width: 100%;
         display: flex;
         align-items: center;
+        &--grow {
+            flex-grow: 2;
+        }
+
+        &:nth-child(2) {
+            order: 3;
+            @media (min-width: a.$tablet) {
+                order: 2;
+            }
+        }
+        &:last-child {
+            border-left: 1px solid a.$main-light;
+            @media (min-width: a.$tablet) {
+                order: 3;
+            }
+        }
     }
 
     &__logo {
@@ -82,6 +102,8 @@
     }
 
     &__profile {
-        padding-left: 19px;
+        @media (min-width: a.$tablet) {
+            padding-left: 19px;
+        }
     }
 }
